--- a/Unit_2_TEST_1_4pm_retake_jan28_DS_Sprint_Challenge_Linear_Models_copy.ipynb
+++ b/Unit_2_TEST_1_4pm_retake_jan28_DS_Sprint_Challenge_Linear_Models_copy.ipynb
@@ -3318,7 +3318,7 @@
         "\n",
         "X_train_encoded = encoder.fit_transform(X_train)\n",
         "X_val_encoded = encoder.transform(X_val)\n",
-        "X_test_encoded = encoder.transform(X_test)"
+        "X_test_encoded = encoder.transform(X_test)'''"
       ],
       "execution_count": 0,
       "outputs": []
@@ -3343,11 +3343,7 @@
       "metadata": {
         "id": "E639ZviRJBg2",
         "colab_type": "code",
-        "outputId": "9a099a62-f4ba-4409-c63e-124a9b3576b6",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 54
-        }
+        "colab": {}
       },
       "source": [
         "'''\n",
@@ -3362,45 +3358,27 @@
         "'''"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "\"\\n#Attempt 2: using https://www.geeksforgeeks.org/ml-one-hot-encoding-of-datasets-in-python/\\n\\n# importing one hot encoder from sklearn \\nfrom sklearn.preprocessing import OneHotEncoder \\n  \\n# creating one hot encoder object with categorical feature\\nonehotencoder = OneHotEncoder(categorical_features = ['Bldg_Type'])  #TypeError here: __init__() got an unexpected keyword argument 'categorical_features'\\ndata = onehotencoder.fit_transform(data).toarray() \\n\""
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 41
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "iejUeu4EJGGr",
         "colab_type": "code",
-        "outputId": "6bd981bc-0a2c-4ad9-8cda-49977c2dc2be",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "colab": {}
       },
       "source": [
+        "'''\n",
         "#Attempt 3: using LS_DSPT4_214.ipynb:\n",
         "import category_encoders as ce\n",
         "from sklearn.linear_model import LogisticRegressionCV\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "\n",
-        "'''\n",
         "using notes from: https://www.geeksforgeeks.org/ml-one-hot-encoding-of-datasets-in-python/\n",
         "One Hot Encoding –\n",
         "It refers to splitting the column which contains numerical categorical data to many columns \n",
         "depending on the number of categories present in that column. Each column contains “0” or “1” \n",
         "corresponding to which column it has been placed.\n",
-        "'''\n",
         "\n",
         "# Data Dictionary \n",
         "target = 'SalePrice'\n",
@@ -3412,18 +3390,11 @@
         "X_val = val[features]\n",
         "y_val = val[target]\n",
         "\n",
-        "print(X_train.shape, X_val.shape)\n"
+        "print(X_train.shape, X_val.shape)\n",
+        "'''\n"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "(1920, 46) (644, 46)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -3437,7 +3408,7 @@
         }
       },
       "source": [
-        "\n",
+        "'''\n",
         "encoder = ce.OneHotEncoder(use_cat_names=True)\n",
         "X_train_encoded = encoder.fit_transform(X_train)\n",
         "X_val_encoded = encoder.transform(X_val)\n",
@@ -3449,7 +3420,8 @@
         "\n",
         "scaler = StandardScaler()\n",
         "X_train_scaled = scaler.fit_transform(X_train_imputed)\n",
-        "X_val_scaled = scaler.transform(X_val_imputed)"
+        "X_val_scaled = scaler.transform(X_val_imputed)\n",
+        "'''"
       ],
       "execution_count": 0,
       "outputs": [
@@ -3461,6 +3433,42 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fnf2q76VwizR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Using LS_DSPT4_211.ipynb; Following the 5 step process \n",
+        "\n",
+        "# 1. Import the appropriate estimator class from Scikit-Learn\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "\n",
+        "# 2. Instantiate this class\n",
+        "model = LinearRegression()\n",
+        "\n",
+        "# 3. Arrange X features matrix & y target vector\n",
+        "X = df[['X_train_encoded']]\n",
+        "y = df['SalePrice']\n",
+        "\n",
+        "print(X.shape, y.shape)\n",
+        "\n",
+        "# 4. Fit the model\n",
+        "model.fit(X, y)\n",
+        "\n",
+        "# 5. Apply the model to new data\n",
+        "sqft = 1497\n",
+        "X_test = [[sqft]]\n",
+        "y_pred = model.predict(X_test)\n",
+        "\n",
+        "# print('Predicted price for ' + str(sqft))\n",
+        "print(f'Predicted price for {sqft} sq ft Tribeca condo: ${y_pred[0]:,.0f}')"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -3479,30 +3487,14 @@
       "metadata": {
         "colab_type": "code",
         "id": "q8GdnL4e7hyK",
-        "outputId": "64ec0751-d4c4-4c61-fc0c-86ad2b66b828",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 184
-        }
+        "colab": {}
       },
       "source": [
         "#MAE \n",
         "model.errors.abs().mean"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-44-b754aea43338>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merrors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m: 'LogisticRegressionCV' object has no attribute 'errors'"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
