--- a/module1-regression-1/LS_DS12A_211_Assignment_Jacob_Pdgett.ipynb
+++ b/module1-regression-1/LS_DS12A_211_Assignment_Jacob_Pdgett.ipynb
@@ -23,201 +23,6 @@
       "name": "LS_DS12A_211_Assignment_Jacob_Pdgett.ipynb",
       "provenance": [],
       "include_colab_link": true
-    },
-    "widgets": {
-      "application/vnd.jupyter.widget-state+json": {
-        "30e813c360fd4ccf88ddcdbbaf2e1e80": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "VBoxModel",
-          "state": {
-            "_view_name": "VBoxView",
-            "_dom_classes": [
-              "widget-interact"
-            ],
-            "_model_name": "VBoxModel",
-            "_view_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_view_count": null,
-            "_view_module_version": "1.5.0",
-            "box_style": "",
-            "layout": "IPY_MODEL_6563ce85e1f444a68c2260c9bb140d49",
-            "_model_module": "@jupyter-widgets/controls",
-            "children": [
-              "IPY_MODEL_3018b9d16fbf44cfa2cf5f10cb66d89d",
-              "IPY_MODEL_59bc25f53b7f4caea829ed2f0e3d36d0"
-            ]
-          }
-        },
-        "6563ce85e1f444a68c2260c9bb140d49": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "state": {
-            "_view_name": "LayoutView",
-            "grid_template_rows": null,
-            "right": null,
-            "justify_content": null,
-            "_view_module": "@jupyter-widgets/base",
-            "overflow": null,
-            "_model_module_version": "1.2.0",
-            "_view_count": null,
-            "flex_flow": null,
-            "width": null,
-            "min_width": null,
-            "border": null,
-            "align_items": null,
-            "bottom": null,
-            "_model_module": "@jupyter-widgets/base",
-            "top": null,
-            "grid_column": null,
-            "overflow_y": null,
-            "overflow_x": null,
-            "grid_auto_flow": null,
-            "grid_area": null,
-            "grid_template_columns": null,
-            "flex": null,
-            "_model_name": "LayoutModel",
-            "justify_items": null,
-            "grid_row": null,
-            "max_height": null,
-            "align_content": null,
-            "visibility": null,
-            "align_self": null,
-            "height": null,
-            "min_height": null,
-            "padding": null,
-            "grid_auto_rows": null,
-            "grid_gap": null,
-            "max_width": null,
-            "order": null,
-            "_view_module_version": "1.2.0",
-            "grid_template_areas": null,
-            "object_position": null,
-            "object_fit": null,
-            "grid_auto_columns": null,
-            "margin": null,
-            "display": null,
-            "left": null
-          }
-        },
-        "3018b9d16fbf44cfa2cf5f10cb66d89d": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "IntSliderModel",
-          "state": {
-            "_view_name": "IntSliderView",
-            "style": "IPY_MODEL_306cbf8026994157a3a2a9cc24aacf52",
-            "_dom_classes": [],
-            "description": "num_of_bedrooms",
-            "step": 1,
-            "_model_name": "IntSliderModel",
-            "orientation": "horizontal",
-            "max": 6,
-            "_view_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "value": 2,
-            "_view_count": null,
-            "disabled": false,
-            "_view_module_version": "1.5.0",
-            "min": 1,
-            "continuous_update": true,
-            "readout_format": "d",
-            "description_tooltip": null,
-            "readout": true,
-            "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_dfbf4f19db584b26988aa56ba2f2c321"
-          }
-        },
-        "59bc25f53b7f4caea829ed2f0e3d36d0": {
-          "model_module": "@jupyter-widgets/output",
-          "model_name": "OutputModel",
-          "state": {
-            "_view_name": "OutputView",
-            "msg_id": "",
-            "_dom_classes": [],
-            "_model_name": "OutputModel",
-            "outputs": [
-              {
-                "output_type": "display_data",
-                "metadata": {
-                  "tags": []
-                },
-                "text/plain": "'$3,974 is the estimated price for 2 bedrooms.\\nEach additional bedroom adds $853 in this model.'"
-              }
-            ],
-            "_view_module": "@jupyter-widgets/output",
-            "_model_module_version": "1.0.0",
-            "_view_count": null,
-            "_view_module_version": "1.0.0",
-            "layout": "IPY_MODEL_2d0661c1d7f6472f8e2dda2a65fda855",
-            "_model_module": "@jupyter-widgets/output"
-          }
-        },
-        "306cbf8026994157a3a2a9cc24aacf52": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "SliderStyleModel",
-          "state": {
-            "_view_name": "StyleView",
-            "handle_color": null,
-            "_model_name": "SliderStyleModel",
-            "description_width": "",
-            "_view_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.5.0",
-            "_view_count": null,
-            "_view_module_version": "1.2.0",
-            "_model_module": "@jupyter-widgets/controls"
-          }
-        },
-        "dfbf4f19db584b26988aa56ba2f2c321": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "state": {
-            "_view_name": "LayoutView",
-            "grid_template_rows": null,
-            "right": null,
-            "justify_content": null,
-            "_view_module": "@jupyter-widgets/base",
-            "overflow": null,
-            "_model_module_version": "1.2.0",
-            "_view_count": null,
-            "flex_flow": null,
-            "width": null,
-            "min_width": null,
-            "border": null,
-            "align_items": null,
-            "bottom": null,
-            "_model_module": "@jupyter-widgets/base",
-            "top": null,
-            "grid_column": null,
-            "overflow_y": null,
-            "overflow_x": null,
-            "grid_auto_flow": null,
-            "grid_area": null,
-            "grid_template_columns": null,
-            "flex": null,
-            "_model_name": "LayoutModel",
-            "justify_items": null,
-            "grid_row": null,
-            "max_height": null,
-            "align_content": null,
-            "visibility": null,
-            "align_self": null,
-            "height": null,
-            "min_height": null,
-            "padding": null,
-            "grid_auto_rows": null,
-            "grid_gap": null,
-            "max_width": null,
-            "order": null,
-            "_view_module_version": "1.2.0",
-            "grid_template_areas": null,
-            "object_position": null,
-            "object_fit": null,
-            "grid_auto_columns": null,
-            "margin": null,
-            "display": null,
-            "left": null
-          }
-        }
-      }
     }
   },
   "cells": [
@@ -900,34 +705,21 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 66,
-          "referenced_widgets": [
-            "30e813c360fd4ccf88ddcdbbaf2e1e80",
-            "6563ce85e1f444a68c2260c9bb140d49",
-            "3018b9d16fbf44cfa2cf5f10cb66d89d",
-            "59bc25f53b7f4caea829ed2f0e3d36d0",
-            "306cbf8026994157a3a2a9cc24aacf52",
-            "dfbf4f19db584b26988aa56ba2f2c321"
-          ]
+          "height": 35
         },
-        "outputId": "91014eb4-b020-42bc-dc95-ac5057585b1a"
+        "outputId": "bb9684ad-62a9-454f-c67c-bd9240850070"
       },
       "source": [
         "from ipywidgets import interact\n",
         "interact(predict, num_of_bedrooms=(1,6));"
       ],
-      "execution_count": 66,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "30e813c360fd4ccf88ddcdbbaf2e1e80",
-              "version_minor": 0,
-              "version_major": 2
-            },
             "text/plain": [
-              "interactive(children=(IntSlider(value=3, description='num_of_bedrooms', max=6, min=1), Output()), _dom_classes…"
+              "'$4,828 is the estimated price for 3 bedrooms.\\nEach additional bedroom adds $853 in this model.'"
             ]
           },
           "metadata": {
@@ -949,12 +741,227 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_3dfDYFsnqkS",
+        "id": "-lTebg7yYFc8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 407
+        },
+        "outputId": "03ca4eb0-e377-402e-b02e-3d6f1be5ea32"
+      },
+      "source": [
+        "# https://www.geeksforgeeks.org/python-pandas-split-strings-into-two-list-columns-using-str-split/\n",
+        "url='https://media.geeksforgeeks.org/wp-content/uploads/nba.csv'\n",
+        "df = pd.read_csv(url)\n",
+        "df"
+      ],
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Name</th>\n",
+              "      <th>Team</th>\n",
+              "      <th>Number</th>\n",
+              "      <th>Position</th>\n",
+              "      <th>Age</th>\n",
+              "      <th>Height</th>\n",
+              "      <th>Weight</th>\n",
+              "      <th>College</th>\n",
+              "      <th>Salary</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Avery Bradley</td>\n",
+              "      <td>Boston Celtics</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>PG</td>\n",
+              "      <td>25.0</td>\n",
+              "      <td>6-2</td>\n",
+              "      <td>180.0</td>\n",
+              "      <td>Texas</td>\n",
+              "      <td>7730337.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Jae Crowder</td>\n",
+              "      <td>Boston Celtics</td>\n",
+              "      <td>99.0</td>\n",
+              "      <td>SF</td>\n",
+              "      <td>25.0</td>\n",
+              "      <td>6-6</td>\n",
+              "      <td>235.0</td>\n",
+              "      <td>Marquette</td>\n",
+              "      <td>6796117.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>John Holland</td>\n",
+              "      <td>Boston Celtics</td>\n",
+              "      <td>30.0</td>\n",
+              "      <td>SG</td>\n",
+              "      <td>27.0</td>\n",
+              "      <td>6-5</td>\n",
+              "      <td>205.0</td>\n",
+              "      <td>Boston University</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>R.J. Hunter</td>\n",
+              "      <td>Boston Celtics</td>\n",
+              "      <td>28.0</td>\n",
+              "      <td>SG</td>\n",
+              "      <td>22.0</td>\n",
+              "      <td>6-5</td>\n",
+              "      <td>185.0</td>\n",
+              "      <td>Georgia State</td>\n",
+              "      <td>1148640.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Jonas Jerebko</td>\n",
+              "      <td>Boston Celtics</td>\n",
+              "      <td>8.0</td>\n",
+              "      <td>PF</td>\n",
+              "      <td>29.0</td>\n",
+              "      <td>6-10</td>\n",
+              "      <td>231.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>5000000.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>453</th>\n",
+              "      <td>Shelvin Mack</td>\n",
+              "      <td>Utah Jazz</td>\n",
+              "      <td>8.0</td>\n",
+              "      <td>PG</td>\n",
+              "      <td>26.0</td>\n",
+              "      <td>6-3</td>\n",
+              "      <td>203.0</td>\n",
+              "      <td>Butler</td>\n",
+              "      <td>2433333.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>454</th>\n",
+              "      <td>Raul Neto</td>\n",
+              "      <td>Utah Jazz</td>\n",
+              "      <td>25.0</td>\n",
+              "      <td>PG</td>\n",
+              "      <td>24.0</td>\n",
+              "      <td>6-1</td>\n",
+              "      <td>179.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>900000.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>455</th>\n",
+              "      <td>Tibor Pleiss</td>\n",
+              "      <td>Utah Jazz</td>\n",
+              "      <td>21.0</td>\n",
+              "      <td>C</td>\n",
+              "      <td>26.0</td>\n",
+              "      <td>7-3</td>\n",
+              "      <td>256.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>2900000.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>456</th>\n",
+              "      <td>Jeff Withey</td>\n",
+              "      <td>Utah Jazz</td>\n",
+              "      <td>24.0</td>\n",
+              "      <td>C</td>\n",
+              "      <td>26.0</td>\n",
+              "      <td>7-0</td>\n",
+              "      <td>231.0</td>\n",
+              "      <td>Kansas</td>\n",
+              "      <td>947276.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>457</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>458 rows × 9 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "              Name            Team  ...            College     Salary\n",
+              "0    Avery Bradley  Boston Celtics  ...              Texas  7730337.0\n",
+              "1      Jae Crowder  Boston Celtics  ...          Marquette  6796117.0\n",
+              "2     John Holland  Boston Celtics  ...  Boston University        NaN\n",
+              "3      R.J. Hunter  Boston Celtics  ...      Georgia State  1148640.0\n",
+              "4    Jonas Jerebko  Boston Celtics  ...                NaN  5000000.0\n",
+              "..             ...             ...  ...                ...        ...\n",
+              "453   Shelvin Mack       Utah Jazz  ...             Butler  2433333.0\n",
+              "454      Raul Neto       Utah Jazz  ...                NaN   900000.0\n",
+              "455   Tibor Pleiss       Utah Jazz  ...                NaN  2900000.0\n",
+              "456    Jeff Withey       Utah Jazz  ...             Kansas   947276.0\n",
+              "457            NaN             NaN  ...                NaN        NaN\n",
+              "\n",
+              "[458 rows x 9 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 83
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SDpT2gU9mUPT",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "# Split facts and features\n",
+        "df1 = df['facts and features'].str.split(' ',)"
       ],
       "execution_count": 0,
       "outputs": []
