--- a/module1-regression-1/Ryan_Mecking_LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/Ryan_Mecking_LS_DS_211_assignment.ipynb
@@ -277,8 +277,8 @@
         "\n",
         "## Stretch Goals\n",
         "- [X] Do linear regression with two or more features.\n",
-        "- [ ] Read [The Discovery of Statistical Regression](https://priceonomics.com/the-discovery-of-statistical-regression/)\n",
-        "- [ ] Read [_An Introduction to Statistical Learning_](http://faculty.marshall.usc.edu/gareth-james/ISL/ISLR%20Seventh%20Printing.pdf), Chapter 2.1: What Is Statistical Learning?"
+        "- [X] Read [The Discovery of Statistical Regression](https://priceonomics.com/the-discovery-of-statistical-regression/)\n",
+        "- [X] Read [_An Introduction to Statistical Learning_](http://faculty.marshall.usc.edu/gareth-james/ISL/ISLR%20Seventh%20Printing.pdf), Chapter 2.1: What Is Statistical Learning?"
       ]
     },
     {
@@ -347,16 +347,16 @@
       "metadata": {
         "id": "4IGDCEoJ1Hrw",
         "colab_type": "code",
+        "outputId": "c65d7d92-09b6-40ba-8e49-7944c7753b9b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 513
-        },
-        "outputId": "c65d7d92-09b6-40ba-8e49-7944c7753b9b"
+        }
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -629,18 +629,18 @@
       "metadata": {
         "id": "mO8g5hIRyuDO",
         "colab_type": "code",
+        "outputId": "33cb1494-e444-46d0-af8a-36407876a0c9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 542
-        },
-        "outputId": "33cb1494-e444-46d0-af8a-36407876a0c9"
+        }
       },
       "source": [
         "#  Look at the data. Choose a feature, and plot its relationship with the target.\n",
         "import plotly.express as px\n",
         "px.scatter(df, x='price', y='bedrooms', trendline='ols')"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -741,17 +741,17 @@
       "metadata": {
         "id": "80nAzeeg4OhP",
         "colab_type": "code",
+        "outputId": "ea8785cd-20d2-468e-86f3-62128d3ab77c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "ea8785cd-20d2-468e-86f3-62128d3ab77c"
+        }
       },
       "source": [
         "# Fitting the moddle\n",
         "model.fit(X_train, y_train)"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -788,17 +788,17 @@
       "metadata": {
         "id": "0xnBsnzk6HMC",
         "colab_type": "code",
+        "outputId": "7fe9259e-8fbd-4b02-c337-6f1d4a199b47",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "7fe9259e-8fbd-4b02-c337-6f1d4a199b47"
+        }
       },
       "source": [
         "#The prediction is \n",
         "y_pred"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -819,11 +819,11 @@
       "metadata": {
         "id": "UWK5SLl-6uaC",
         "colab_type": "code",
+        "outputId": "9bd1d5da-e634-445e-abe5-aef23a05b298",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "9bd1d5da-e634-445e-abe5-aef23a05b298"
+        }
       },
       "source": [
         "#Define a function to make new predictions and explain the model coefficient.\n",
@@ -837,7 +837,7 @@
         "\n",
         "print(predict(3))"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -854,6 +854,7 @@
       "metadata": {
         "id": "29m0wMA9c_7P",
         "colab_type": "code",
+        "outputId": "4e73a5e8-3d66-42f0-f40b-6739644802cb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 83,
@@ -865,14 +866,13 @@
             "9b5e7943dcdb47598d287265ea712cb8",
             "e19eb5e5e514410b8f003bc1bcf4ed74"
           ]
-        },
-        "outputId": "4e73a5e8-3d66-42f0-f40b-6739644802cb"
+        }
       },
       "source": [
         "from ipywidgets import interact\n",
         "interact(predict, bedrooms=(0,250));"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -914,11 +914,11 @@
       "metadata": {
         "id": "Q9dIAH709CcR",
         "colab_type": "code",
+        "outputId": "e0764d09-8605-489c-ed04-eb1b28350f54",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "e0764d09-8605-489c-ed04-eb1b28350f54"
+        }
       },
       "source": [
         "model = LinearRegression()\n",
@@ -928,7 +928,7 @@
         "y_pred = model.predict(X_test)\n",
         "y_pred"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -949,11 +949,11 @@
       "metadata": {
         "id": "r9FOkTH7F19Y",
         "colab_type": "code",
+        "outputId": "cff70cf8-b947-4418-a8a8-e9d8be66cd27",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "cff70cf8-b947-4418-a8a8-e9d8be66cd27"
+        }
       },
       "source": [
         "def predict(x1):\n",
@@ -966,7 +966,7 @@
         "\n",
         "print(predict([3, 25]))"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
