--- a/module2-regression-2/Ryan_Mecking_LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/Ryan_Mecking_LS_DS_212_assignment.ipynb
@@ -22,6 +22,7 @@
     "colab": {
       "name": "Ryan Mecking LS_DS_212_assignment.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
@@ -168,7 +169,7 @@
         "df['created'] = pd.to_datetime(df['created'])\n",
         "df.head(1)"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -320,7 +321,7 @@
         "print (guess)\n",
         "print (test_guess)"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -368,7 +369,7 @@
         "df['animal_lover'] = animal_lover\n",
         "df.head(1)"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -493,17 +494,17 @@
       "metadata": {
         "id": "GV5Lj1mW3R2v",
         "colab_type": "code",
+        "outputId": "32e2e12b-35f1-4476-e33c-f6b59cf2bc87",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 501
-        },
-        "outputId": "32e2e12b-35f1-4476-e33c-f6b59cf2bc87"
+        }
       },
       "source": [
         "#creating a feature that contains the total number of features\n",
         "df['house_features'] = df.iloc[:, -24: ].sum(axis=1)"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -840,7 +841,7 @@
         "y_pred = model.predict(X_test)\n",
         "y_pred"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -878,7 +879,7 @@
         "\n",
         "print(predict([24,8]))"
       ],
-      "execution_count": 44,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -905,7 +906,7 @@
         "# Get the model's coefficients and intercept.\n",
         "model.coef_, model.intercept_ "
       ],
-      "execution_count": 46,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -926,16 +927,16 @@
       "metadata": {
         "id": "ojtjsGkZ10Mf",
         "colab_type": "code",
+        "outputId": "57edd826-3df4-4bc7-a46f-f08215906ef9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "57edd826-3df4-4bc7-a46f-f08215906ef9"
+        }
       },
       "source": [
         "(y_pred - y_train).abs().mean()"
       ],
-      "execution_count": 47,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1020,17 +1021,17 @@
       "metadata": {
         "id": "llue6cw4u2Xp",
         "colab_type": "code",
+        "outputId": "5db82c74-74ff-4352-c822-47a9b0ee0f9f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "5db82c74-74ff-4352-c822-47a9b0ee0f9f"
+        }
       },
       "source": [
         "feature = 'house_features'\n",
         "squared_errors(train, feature, target, m=0, b=y_train.mean())"
       ],
-      "execution_count": 49,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
