Checks for null values

--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -339,6 +339,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bathrooms                  0\n",
+       "bedrooms                   0\n",
+       "created                    0\n",
+       "description             1425\n",
+       "display_address          133\n",
+       "latitude                   0\n",
+       "longitude                  0\n",
+       "price                      0\n",
+       "street_address            10\n",
+       "interest_level             0\n",
+       "elevator                   0\n",
+       "cats_allowed               0\n",
+       "hardwood_floors            0\n",
+       "dogs_allowed               0\n",
+       "doorman                    0\n",
+       "dishwasher                 0\n",
+       "no_fee                     0\n",
+       "laundry_in_building        0\n",
+       "fitness_center             0\n",
+       "pre-war                    0\n",
+       "laundry_in_unit            0\n",
+       "roof_deck                  0\n",
+       "outdoor_space              0\n",
+       "dining_room                0\n",
+       "high_speed_internet        0\n",
+       "balcony                    0\n",
+       "swimming_pool              0\n",
+       "new_construction           0\n",
+       "terrace                    0\n",
+       "exclusive                  0\n",
+       "loft                       0\n",
+       "garden_patio               0\n",
+       "wheelchair_access          0\n",
+       "common_outdoor_space       0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
