--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -135,7 +135,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "dafb9326-bc14-4d57-f307-7b4cb9375d53"
+        "outputId": "6db64668-9eca-40e2-a26d-918e5a869d4b"
       },
       "source": [
         "import numpy as np\n",
@@ -157,7 +157,7 @@
         "\n",
         "\"\"\" START ASSIGNMENT HERE \"\"\""
       ],
-      "execution_count": 132,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -169,7 +169,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 132
+          "execution_count": 2
         }
       ]
     },
@@ -182,7 +182,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 123
         },
-        "outputId": "65c2beb0-a4b8-46b9-c9ea-2e03d96116a9"
+        "outputId": "2aab0dfd-57a2-484e-8d97-753cb5e54597"
       },
       "source": [
         "\"\"\" Engineering two features \"\"\"\n",
@@ -194,7 +194,7 @@
         "df['description_length'] = df['description_length'].replace({np.NaN: 0})\n",
         "df['description_length'].head(5)"
       ],
-      "execution_count": 133,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -211,7 +211,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 133
+          "execution_count": 3
         }
       ]
     },
@@ -224,15 +224,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 501
         },
-        "outputId": "9507aaf8-3ae5-4673-a929-d10b6093f4d8"
+        "outputId": "a2cb568e-13e6-47d8-db0d-9f8a9e13a008"
       },
       "source": [
         "# Create a feature for ratio of beds to baths ('bedrooms' / 'bathrooms')\n",
-        "train['bed_bath_ratio'] = train['bedrooms'] / train['bathrooms']\n",
-        "test['bed_bath_ratio'] = test['bedrooms'] / test['bathrooms']\n",
-        "train.head(5)"
+        "df['bed_bath_ratio'] = df['bedrooms'] / df['bathrooms']\n",
+        "df['bed_bath_ratio'] = df['bedrooms'] / df['bathrooms']\n",
+        "df.head(5)"
       ],
-      "execution_count": 134,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -295,6 +295,84 @@
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1.5</td>\n",
+              "      <td>3</td>\n",
+              "      <td>2016-06-24 07:54:24</td>\n",
+              "      <td>A Brand New 3 Bedroom 1.5 bath ApartmentEnjoy ...</td>\n",
+              "      <td>Metropolitan Avenue</td>\n",
+              "      <td>40.7145</td>\n",
+              "      <td>-73.9425</td>\n",
+              "      <td>3000</td>\n",
+              "      <td>792 Metropolitan Avenue</td>\n",
+              "      <td>medium</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>588</td>\n",
+              "      <td>2.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2016-06-12 12:19:27</td>\n",
+              "      <td></td>\n",
+              "      <td>Columbus Avenue</td>\n",
+              "      <td>40.7947</td>\n",
+              "      <td>-73.9667</td>\n",
+              "      <td>5465</td>\n",
+              "      <td>808 Columbus Avenue</td>\n",
+              "      <td>low</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>8</td>\n",
+              "      <td>2.0</td>\n",
+              "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>1.0</td>\n",
@@ -412,95 +490,17 @@
               "      <td>479</td>\n",
               "      <td>4.0</td>\n",
               "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>2.0</td>\n",
-              "      <td>4</td>\n",
-              "      <td>2016-04-19 04:24:47</td>\n",
-              "      <td></td>\n",
-              "      <td>West 18th Street</td>\n",
-              "      <td>40.7429</td>\n",
-              "      <td>-74.0028</td>\n",
-              "      <td>7995</td>\n",
-              "      <td>350 West 18th Street</td>\n",
-              "      <td>medium</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>8</td>\n",
-              "      <td>2.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>1.0</td>\n",
-              "      <td>2</td>\n",
-              "      <td>2016-04-27 03:19:56</td>\n",
-              "      <td>Stunning unit with a great location and lots o...</td>\n",
-              "      <td>West 107th Street</td>\n",
-              "      <td>40.8012</td>\n",
-              "      <td>-73.9660</td>\n",
-              "      <td>3600</td>\n",
-              "      <td>210 West 107th Street</td>\n",
-              "      <td>low</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>579</td>\n",
-              "      <td>2.0</td>\n",
-              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
               "   bathrooms  bedrooms  ... description_length bed_bath_ratio\n",
+              "0        1.5         3  ...                588            2.0\n",
+              "1        1.0         2  ...                  8            2.0\n",
               "2        1.0         1  ...                691            1.0\n",
               "3        1.0         1  ...                492            1.0\n",
               "4        1.0         4  ...                479            4.0\n",
-              "5        2.0         4  ...                  8            2.0\n",
-              "6        1.0         2  ...                579            2.0\n",
               "\n",
               "[5 rows x 36 columns]"
             ]
@@ -508,7 +508,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 134
+          "execution_count": 4
         }
       ]
     },
@@ -521,7 +521,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "b29b6efe-f95e-4aaf-f3a9-1cba3084e5a3"
+        "outputId": "12867ee7-04c8-47a5-d87f-e6e98316489d"
       },
       "source": [
         "\"\"\" Casting 'created' to a datetime object \"\"\"\n",
@@ -529,7 +529,7 @@
         "# 'created' is of type object\n",
         "df['created'].dtype"
       ],
-      "execution_count": 135,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -541,7 +541,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 135
+          "execution_count": 5
         }
       ]
     },
@@ -568,7 +568,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 123
         },
-        "outputId": "7deb86ad-62f6-46a4-a482-44c6e936686d"
+        "outputId": "87f75e0e-6814-4b5c-9dfc-2651a1ac53c6"
       },
       "source": [
         "\"\"\" Splitting the dataframe into training and testing \"\"\"\n",
@@ -595,7 +595,7 @@
         "print(test['created'].min())\n",
         "print(test['created'].max())"
       ],
-      "execution_count": 137,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -632,11 +632,7 @@
       "metadata": {
         "id": "kB16SEOnDQN5",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
-        },
-        "outputId": "a995edc4-6d00-4a2c-fd8d-2daeb28e0582"
+        "colab": {}
       },
       "source": [
         "# Specify the features and target\n",
@@ -653,17 +649,8 @@
         "X_test = test[features]\n",
         "y_test = test[target]"
       ],
-      "execution_count": 139,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "<class 'pandas.core.series.Series'>\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -674,12 +661,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "ece4236e-20b2-45ff-e824-0a4dfd1d0e9e"
+        "outputId": "42ab3cd3-f95d-4625-e8f2-00f5843c2365"
       },
       "source": [
         "model.fit(X_train, y_train)"
       ],
-      "execution_count": 140,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -691,7 +678,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 140
+          "execution_count": 10
         }
       ]
     },
@@ -704,13 +691,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "48a0a915-aa9a-42c6-cf1e-08211728df2f"
+        "outputId": "fa1bc8be-859d-47a6-f364-ce4878668ffd"
       },
       "source": [
         "# The models intercept and coefficients\n",
         "model.intercept_, model.coef_"
       ],
-      "execution_count": 141,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -722,7 +709,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 141
+          "execution_count": 11
         }
       ]
     },
@@ -735,7 +722,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 194
         },
-        "outputId": "6bdfe456-a6f9-4be7-eeb9-751f6846ecc6"
+        "outputId": "8443c6d2-2e97-4d93-8ee8-609f6e332358"
       },
       "source": [
         "#-------------------------------------------------------------\n",
@@ -779,7 +766,7 @@
         "print(\"Training R2:\", train_r2)\n",
         "print(\"Testing R2:\", test_r2)"
       ],
-      "execution_count": 148,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -804,15 +791,116 @@
       "metadata": {
         "id": "3X4w4tynsZRc",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "624d1892-360f-4f3b-ae77-8ea9125f2238"
       },
       "source": [
         "\"\"\"\n",
         "I've been trying to read in an attempt to understand the math more. Passing more features to the sklearn function would be trivial. The hard part is creating new features that have predictive power.\n",
         "\"\"\""
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "\"\\nI've been trying to read in an attempt to understand the math more. Passing more features to the sklearn function would be trivial. The hard part is creating new features that have predictive power.\\n\""
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ex6yvQiE18Rh",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 194
+        },
+        "outputId": "2fab3bca-68d3-4fdd-856c-099f32295e3c"
+      },
+      "source": [
+        "features = ['description_length', 'bedrooms', 'elevator', 'cats_allowed', 'hardwood_floors', 'dogs_allowed',\n",
+        "       'doorman', 'dishwasher', 'no_fee', 'laundry_in_building',\n",
+        "       'fitness_center', 'pre-war', 'laundry_in_unit', 'roof_deck',\n",
+        "       'outdoor_space', 'dining_room', 'high_speed_internet', 'balcony',\n",
+        "       'swimming_pool', 'new_construction', 'terrace', 'exclusive', 'loft',\n",
+        "       'garden_patio', 'wheelchair_access', 'common_outdoor_space']\n",
+        "target = 'price'\n",
+        "\n",
+        "# Train\n",
+        "X_train = train[features]\n",
+        "y_train = train[target]\n",
+        "\n",
+        "# Test\n",
+        "X_test = test[features]\n",
+        "y_test = test[target]\n",
+        "\n",
+        "model.fit(X_train, y_train)\n",
+        "\n",
+        "\n",
+        "\"\"\"MAE\"\"\"\n",
+        "y_pred_train = model.predict(X_train)\n",
+        "train_mae = mean_absolute_error(y_train, y_pred_train)\n",
+        "\n",
+        "y_pred_test = model.predict(X_test)\n",
+        "test_mae = mean_absolute_error(y_test, y_pred_test)\n",
+        "\n",
+        "print(\"Training mean absolute error:\", train_mae)\n",
+        "print(\"Testing mean absolute error:\", test_mae)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\"\"\"RMSE\"\"\"\n",
+        "train_mse = mean_squared_error(y_train, y_pred_train)\n",
+        "train_rmse = np.sqrt(train_mse)\n",
+        "\n",
+        "test_mse = mean_squared_error(y_test, y_pred_test)\n",
+        "test_rmse = np.sqrt(test_mse)\n",
+        "\n",
+        "print('\\n')\n",
+        "print(\"Training root mean square error:\", train_rmse)\n",
+        "print(\"Testing root mean square error:\", test_rmse)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\"\"\"R2\"\"\"\n",
+        "train_r2 = model.score(X_train, y_train)\n",
+        "test_r2 = model.score(X_test, y_test)\n",
+        "\n",
+        "print('\\n')\n",
+        "print(\"Training R2:\", train_r2)\n",
+        "print(\"Testing R2:\", test_r2)"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Training mean absolute error: 867.7652924093171\n",
+            "Testing mean absolute error: 878.9072083853707\n",
+            "\n",
+            "\n",
+            "Training root mean square error: 1332.1317335607703\n",
+            "Testing root mean square error: 1331.5732810510042\n",
+            "\n",
+            "\n",
+            "Training R2: 0.4285460396614476\n",
+            "Testing R2: 0.4295124614658693\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
